--- a/posttg.html
+++ b/posttg.html
@@ -81,9 +81,9 @@
             <div class="blog-post-data">
                 <h3 class="title blog-post-title">Tomodachi Game</h3>
                 <div class="article-data">
-                    <span>Aug 8 2022</span>
+                    <span>IN PROGRESS</span>
                     <span class="article-data-spacer"></span>
-                    <span>10 min read</span>
+                    <span>0 min read</span>
                 </div>
                 <img src="./assets/images/quick_read/quick_read_2banner.jpg" alt="">
             </div>
